--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,8 @@
 @import "./global.css";
-@import "./components/header.css";
-@import "./components/hero.css";
-@import "./components/loading.css";
-@import "./components/interactive.css";
 @import "./components/chat.css";
 @import "./components/footer.css";
+@import "./components/header.css";
+@import "./components/hero.css";
+@import "./components/interactive.css";
+@import "./components/loading.css";
+@import "./components/select.css";
