--- a/src/styles/components/select.css
+++ b/src/styles/components/select.css
@@ -1,13 +1,13 @@
 .select {
-  @apply flex gap-3 items-center;
+  @apply flex items-center gap-3;
   .react-aria-Label {
-    @apply text-gray-500 font-normal dark:text-gray-50;
+    @apply font-normal text-gray-500 dark:text-gray-50;
   }
   & > button {
-    @apply bg-gray-50 border border-gray-300 rounded flex items-center justify-between gap-3 w-[100px] dark:bg-opacity-5 dark:border-gray-600 shadow-light dark:shadow-dark dark:text-white;
+    @apply flex w-[100px] items-center justify-between gap-3 rounded border border-gray-300 bg-gray-50 shadow-light dark:border-gray-600 dark:bg-opacity-5 dark:text-white dark:shadow-dark;
     &[data-hovered],
     &[data-focused] {
-      @apply border-gray-500 bg-gray-50 dark:bg-opacity-5 bg-none outline-none dark:border-gray-300;
+      @apply border-gray-500 bg-gray-50 bg-none outline-none dark:border-gray-300 dark:bg-opacity-5;
     }
 
     .icon img {
@@ -17,13 +17,13 @@
 }
 
 .select-list {
-  @apply bg-gray-50 border border-gray-300 rounded w-[var(--trigger-width)] dark:bg-opacity-5 dark:border-gray-600 shadow-light dark:shadow-dark;
+  @apply w-[var(--trigger-width)] rounded border border-gray-300 bg-gray-50 shadow-light dark:border-gray-600 dark:bg-opacity-5 dark:shadow-dark;
   &[data-hovered],
   &[data-focused] {
     @apply outline-none;
   }
   .react-aria-ListBoxItem {
-    @apply px-4 py-9px relative;
+    @apply relative px-4 py-9px;
 
     &[data-hovered],
     &[data-focused] {
@@ -31,10 +31,10 @@
     }
     &[data-hovered],
     &[data-focus-visible] {
-      @apply bg-gray-200 dark:bg-opacity-10 cursor-pointer;
+      @apply cursor-pointer bg-gray-200 dark:bg-opacity-10;
     }
     &[data-selected] {
-      @apply after:bg-[url('/icons/check.svg')] after:block after:w-4 after:h-4 after:absolute after:right-3 after:top-[calc(50%-8px)] after:bg-no-repeat;
+      @apply after:absolute after:right-3 after:top-[calc(50%-8px)] after:block after:h-4 after:w-4 after:bg-[url('/icons/check.svg')] after:bg-no-repeat;
     }
   }
 }
