--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
 @import "./global.css";
+@import "./components/cards.css";
 @import "./components/chat.css";
 @import "./components/footer.css";
 @import "./components/header.css";
