--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,3 +7,6 @@
 @import "./components/interactive.css";
 @import "./components/loading.css";
 @import "./components/select.css";
+@import "./components/content-nav.css";
+@import "./components/card-grid.css";
+@import "./components/switchback.css";
