--- a/src/styles/components/cards.css
+++ b/src/styles/components/cards.css
@@ -1,30 +1,31 @@
 .card {
-  @apply justify-between max-w-[700px] bg-gray-50 border border-gray-300 rounded px-6 py-4 dark:bg-gray-900 dark:border-gray-600;
-  &,
-  .info {
-    @apply flex items-center;
-  }
-  .info {
-    @apply gap-3;
-  }
+  @apply justify-between max-w-[700px] bg-gray-50 border border-gray-300 rounded-lg px-3 py-2 sm:px-6 sm:py-4 dark:bg-black-500 dark:border-gray-700;
+
   &.model-card {
     .icon {
-      @apply h-7 w-7 rounded-full border border-gray-300 p-[3px] dark:border-gray-600;
+      @apply h-7 w-7 rounded-full border border-gray-300 p-[3px] dark:border-gray-700  mt-[5px] sm:mt-0 sm:items-center;
+    }
+    &,
+    .info {
+      @apply flex items-start;
+    }
+    .info {
+      @apply gap-4;
     }
     p {
-      @apply flex;
+      @apply flex flex-wrap sm:flex-nowrap;
     }
     p > span {
       &:first-child {
         @apply text-gray-600 font-medium dark:text-gray-300 mr-1;
       }
       &:last-child {
-        @apply text-black-600 font-semibold dark:text-gray-100 ml-1;
+        @apply text-black-600 font-semibold dark:text-gray-100 sm:ml-1 w-full;
       }
     }
   }
   a {
-    @apply m-[-14px] p-[14px];
+    @apply m-[-14px] p-[14px] pt-[19px] flex-shrink-0 sm:pt-[14px];
     img {
       @apply transition-filter dark:invert-100 brightness-0 contrast-[25%];
     }
