--- a/src/styles/components/select.css
+++ b/src/styles/components/select.css
@@ -1,15 +1,17 @@
 .select {
   @apply flex items-center gap-3;
   .react-aria-Label {
-    @apply font-normal text-gray-500 dark:text-gray-50;
+    @apply font-normal text-gray-600 dark:text-gray-50;
   }
   & > button {
-    @apply flex w-[100px] items-center justify-between gap-3 rounded border border-gray-300 bg-gray-50 shadow-light dark:border-gray-600 dark:bg-opacity-5 dark:text-white dark:shadow-dark;
+    @apply flex w-[100px] items-center justify-between gap-3 rounded border border-gray-300  bg-gray-50 shadow-light dark:border-gray-600 dark:bg-opacity-5 dark:text-white dark:shadow-dark px-2 py-1;
     &[data-hovered],
     &[data-focused] {
-      @apply border-gray-500 bg-gray-50 bg-none outline-none dark:border-gray-300 dark:bg-opacity-5;
+      @apply border-gray-500 bg-gray-50  dark:border-gray-300 dark:bg-opacity-5 outline-0;
     }
-
+    &[data-focus-visible] {
+      @apply outline-2;
+    }
     .icon img {
       @apply w-3;
     }
@@ -17,21 +19,17 @@
 }
 
 .select-list {
-  @apply w-[var(--trigger-width)] rounded border border-gray-300 bg-gray-50 shadow-light dark:border-gray-600 dark:bg-opacity-5 dark:shadow-dark;
-  &[data-hovered],
-  &[data-focused] {
-    @apply outline-none;
-  }
+  @apply w-[var(--trigger-width)] rounded border border-gray-300 bg-gray-50 shadow-light dark:border-gray-600 dark:bg-[#1e2021] dark:shadow-dark;
+
   .react-aria-ListBoxItem {
     @apply relative px-4 py-9px;
 
     &[data-hovered],
     &[data-focused] {
-      @apply outline-none;
+      @apply cursor-pointer bg-gray-200 dark:bg-[#373738] outline-0;
     }
-    &[data-hovered],
     &[data-focus-visible] {
-      @apply cursor-pointer bg-gray-200 dark:bg-opacity-10;
+      @apply outline-2;
     }
     &[data-selected] {
       @apply after:absolute after:right-3 after:top-[calc(50%-8px)] after:block after:h-4 after:w-4 after:bg-[url('/icons/check.svg')] after:bg-no-repeat;
