feat: add page not found styles

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,3 +10,4 @@
 @import "./components/content-nav.css";
 @import "./components/card-grid.css";
 @import "./components/switchback.css";
+@import "./components/not-found.css";
