fix: rename container

--- a/src/styles/components/switchback.css
+++ b/src/styles/components/switchback.css
@@ -1,6 +1,6 @@
 .switchback {
   @apply mb-10 mt-1   border-b border-gray-100 pb-10 md:mt-3   md:px-6 md:pb-14 md:mb-14 lg:pb-20 lg:mb-20 dark:border-b-gray-900;
-  .container {
+  .switchback-container {
     @apply m-auto flex max-w-lg flex-col gap-3  items-center  md:flex-row md:gap-6 md:max-w-screen-lg;
     & > div {
       @apply w-full;
